--- a/web design.css
+++ b/web design.css
@@ -387,6 +387,8 @@ height:620px;
     border-radius: 15px;
     position: absolute;
     margin-top: 5px;
+    overflow:hidden;
+
 }
 .boxnum1 b{
     margin-left: 5px;
